--- a/facility/arred_linear.tex
+++ b/facility/arred_linear.tex
@@ -1,73 +1,103 @@
-Nessa seção vamos apresentar o algoritmo que faz arredondamento determinístico de uma solução relaxada do programa inteiro que modela o problema localização de instalações. Esse algoritmo foi estudado na Seção 4.5 do livro WS2011 e foi desenvolvido pelo Chudak e Shmoys~\cite{Chudak2003}.
+Nessa seção vamos apresentar o algoritmo que faz arredondamento determinístico de uma solução relaxada do programa inteiro que modela o problema localização de instalações. Esse algoritmo foi estudado na Seção 4.5 do livro WS2011 e foi desenvolvido por Chudak e Shmoys~\cite{Chudak2003}. Vamos utilizar os programas lineares~\eqref{P1} e~\eqref{D1}.
 
-
-Vamos então definir algumas coisas que serão necessárias no nosso algoritmo.
-\begin{definition}
-    Seja $(x^*,y^*)$ uma solução do programa linear. Dizemos que uma instalação $i$ está na \emph{vizinhança} de um cliente $j$ se $x^*_{ij} > 0$. Seja $N(j) = \{ i \in F : x^*_{ij} > 0\}$.
+Começaremos com algumas definições que serão necessárias para o algoritmo.
+\begin{definition}\label{def:3.7}
+    Seja $(x,y)$ uma solução de~\eqref{P1}. Denotamos por ${N(j) \coloneqq \{ i \in F : x_{ij} > 0\}}$ a \emph{vizinhança} de um cliente $j$. Além disso, denotamos por $N^2(j) \coloneqq \set{\ell \in D : N(j) \cap N(\ell) \neq \emptyset}$ o conjunto de clientes que compartilham vizinhos com $j$.
 \end{definition}
-Dada essa definição, vamos enunciar um lema que irá nos ajudar a provar uma cota superior para o custo de associação da solução aproximada escolhida pelo algoritmo.
-\begin{lemma}\label{lemma:3.5}
-    Sejam $(x^*,y^*)$ e $(v^*,w^*)$ soluções do programa linear e do seu dual, respectivamente, e $j$ um cliente qualquer. Para todo $i \in N(j)$, $c_{ij} \leq v^*_j$.
-\end{lemma}
-\begin{proof}
-    Como $i \in N(j)$, então $x^*_{ij}>0$. Assim, pelas folgas complementares, a desigualdade do dual correspondente a~\eqref{P4} vale por igualdade, então $v^*_j - w^*_{ij} = c_{ij}$. Como $w^*_{ij} \geq 0$, $c_{ij} \leq v^*_j$. 
-\end{proof}
-Com esse lema, sabemos que se em um conjunto $S \subseteq F$ de instalações abertas, para todo cliente $j \in D$, existe uma instalação aberta $i$ em $N(j)$, então $c_{ij}\leq v_j^*$ e o custo total de associação seria no máximo $\sum_{j\in D}v_j^* \leq \opt(I)$. Entretanto, não é garantido uma cota superior para o custo de abertura de $S$. Vamos descobrir como encontrar um $S$ com um bom custo de abertura e um bom custo de associação. Seja $j_k$ um cliente qualquer. Se abrirmos a instalação $i_k$ mais barata de $N(j_k)$ conseguimos limitar o custo de sua abertura por
-\[\tag{*} \label{relx_fl:*}
-    f_{i_k} = f_{i_k} \sum_{i \in N(j_k)}x^*_{ij_k} = \sum_{i \in N(j_k)}f_{i_k}x^*_{ij_k} \leq \sum_{i \in N(j_k)}f_{i}y^*_{i},
-\]
-onde a primeira igualdade vale por \eqref{P3} e pela definição de $N(j_k)$ e a desigualdade vale por termos escolhido $i_k$ como a instalação mais barata de $N(j_k)$.
 
-Essa informação será importante para a prova da razão de aproximação do nosso algoritmo. Agora, faremos uma última definição necessária para o nosso algoritmo.
-
-\begin{definition}
-    Seja $j\in D$ um cliente. Seja $N^2(j)$ o conjunto dos clientes $i \in D$ tais que $N(i) \cap N(j) \neq \emptyset$.
-\end{definition}
-Agora, vamos definir o algoritmo. Nele, $S$ será o conjunto das instalações a serem abertas e $\sigma : D \rightarrow F $ a função que associa cada cliente a uma instalação aberta. Ambos serão montados durante o algoritmo.
-\begin{algorithm}
+A ideia do algoritmo é que escolheremos de maneira quase gulosa clientes e instalações que contribuem pouco no valor objetivo de~\eqref{D1}.
+\begin{algorithm}[t]
     \caption{\sc ArredDet-CS($F,D,c,f$)}
     \label{fl:plrounding}
     \begin{algorithmic}[1]
-        \State Sejam $(x^*,y^*)$ e $(v^*,y^*)$ soluções ótimas para o primal e o dual da relaxação do programa inteiro de $I(F,D,c,f)$.
-        \State $S \gets \emptyset$
-        \State $C_0 \gets D$ 
-        \State $k \gets 0$
-        \While{$C_k \neq \emptyset$}
-        \State Escolha $j_k \in C_k$ que minimize $v_j^*$
-        \State Escolha $i_k \in N(j_k)$ que minimize $f_{i}$
-        \State $S \gets S \cup \{i_k\}$
-        \State Associe a instalação $i_k$ a cada cliente em $N^2(j_k) \cap C_k$
-        \State $C_{k+1} \gets C_k \setminus N^2(j_k)$
-        \State $k \gets k+1$
+        \State Sejam $(x^*,y^*)$ e $(v^*,y^*)$ soluções ótimas para~\eqref{P1} e~\eqref{D1}.
+        \State $X \gets \emptyset$
+        \State $S \gets D$ 
+        \While{$S \neq \emptyset$}
+        \State Escolha $j \in S$ que minimize $v_j^*$
+        \State Escolha $i \in N(j)$ que minimize $f_{i}$
+        \State $X \gets X \cup \{i\}$
+        \State $S \gets S \setminus N^2(j)$
         \EndWhile
-        \State \Return $S$
+        \State \Return $X$
     \end{algorithmic}
 \end{algorithm}
 
-\begin{theorem}
-    O algoritmo {\sc ArredDet-CS} é uma $4$-aproximação para o problema da localização de instalações.
-\end{theorem}
+Para provar a razão de aproximação de {\sc ArredDet-CS} vamos precisar de uma sequência de lemas. No primeiro deles, vamos limitar o custo de associação dos clientes escolhidos na linha 5 do algoritmo.
+
+\begin{lemma}\label{lemma:3.8}
+    Sejam $(x^*,y^*)$ e $(v^*,w^*)$ soluções ótimas de~\eqref{P1} e ~\eqref{D1}, respectivamente, e $j$ um cliente qualquer. Para todo $i \in N(j)$, vale que $c_{ij} \leq v^*_j$.
+\end{lemma}
 \begin{proof}
-    Primeiro, vamos mostrar que o algoritmo é polinomial. Sabemos que é possível encontrar uma solução para o problema linear e o seu dual em tempo polinomial utilizando o método dos elipsoides~\cite{Kha79}. Sabemos que o laço da linha 5 irá executar no máximo $|D|$ iterações, uma vez que sempre retiramos pelo menos um elemento de $C$. Além disso, as linhas $6-12$ são claramente polinomiais.
+    Como $i \in N(j)$, então $x^*_{ij}>0$. Assim, pelas folgas complementares, a desigualdade~\eqref{D3} do dual correspondente a variável $x_{ij}^*$ vale por igualdade, então $v^*_j - w^*_{ij} = c_{ij}$. Como $w^*_{ij} \geq 0$, então $c_{ij} \leq v^*_j$. 
+\end{proof}
 
+Com esse lema, conseguimos provar o segundo lema que limita o custo dos clientes em $N^2(j)$ que são removidos de $S$ na linha 8 do algoritmo.
+
+\begin{lemma}\label{lemma:3.9}
+    Sejam $(x^*,y^*)$ e $(v^*,w^*)$ soluções ótimas de~\eqref{P1} e ~\eqref{D1}, respectivamente, e $j$ um cliente qualquer. Para todo $i \in N(j)$ e $\ell \in N^2(j)$ tal que $v_j^* \leq v_\ell^* $, vale que $c_{i\ell} \leq 3v^*_\ell$.
+\end{lemma}
+
+\begin{proof}
+    Seja $h \in N(j) \cap N(\ell)$. Pela desigualdade triangular, vale que ${c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell}}$. Pelo Lema~\ref{lemma:3.8}, vale que $c_{ij} \leq v_j^*$, $c_{hj} \leq v_j^*$ e $c_{h\ell} \leq v_\ell^*$, uma vez que $i,h \in N(j)$ e $h \in N(\ell)$. Assim,
+    \begin{align}
+        c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell} \leq 2 v_j^* + v_\ell^* \leq 3 v_\ell^*. \nonumber
+    \end{align}
+\end{proof}
+
+Assim, resta apenas limitar o custo de abertura das instalações que escolhemos na linha 6 do algoritmo.
+
+\begin{lemma} \label{lemma:3.10}
+    Sejam $(x^*,y^*)$ e $(v^*,w^*)$ soluções ótimas de~\eqref{P1} e ~\eqref{D1}, respectivamente, e $j$ um cliente qualquer. Para $i$ que minimiza $f_i$ em $N(j)$, vale que 
+    \begin{equation}
+        f_i \leq \sum_{h \in N(j)} f_h y_h^*. \nonumber
+    \end{equation}
+\end{lemma}
+
+\begin{proof}
+    É evidente que 
+    \begin{align}
+        f_{i} \leq f_{i} \sum_{h \in N(j)}x^*_{hj} = \sum_{h \in N(j)}f_{i}x^*_{hj} \leq \sum_{h \in N(j)}f_{h}y^*_{h}, \nonumber
+    \end{align}
+    onde a primeira desigualdade vale pela restrição~\eqref{P2} e pela definição de $N(j)$ e a última desigualdade vale pela restrição~\eqref{P3} e por $i$ minimizar $f_i$ em $N(j)$.
+\end{proof}
+
+Com isso, conseguimos provar a razão de aproximação de {\sc ArredDet-CS}.
+\begin{theorem}
+    O algoritmo {\sc ArredDet-CS} é uma $4$-aproximação para o problema de localização de instalações métrico.
+\end{theorem}
+
+\begin{proof}
+    Primeiro, vamos mostrar que o algoritmo é polinomial. Sabemos que é possível encontrar uma solução para~\eqref{P1} e~\eqref{D1} em tempo polinomial utilizando o método dos elipsoides~\cite{Kha79}. Sabemos que o laço da linha 5 irá executar no máximo $|D|$ iterações, uma vez que sempre retiramos pelo menos um elemento de $S$. Além disso, as linhas $6-12$ são claramente polinomiais.
+    
     Agora, vamos mostrar que o algoritmo é uma $4$-aproximação.
-    Perceba que, para $k_1$ e $k_2$ com $k_1 < k_2$, $N(j_{k_1})\cap N(j_{k_2}) = \emptyset$, caso contrário $j_{k_2} \in N^2(j_{k_1})$ e não estaria em~$C_{k_2}$.
-    Seja $F' \subseteq F$, tal que $F' = \bigcup_k N(j_k)$.
-    Por \eqref{relx_fl:*}, vale que $f_{i_k} \leq \sum_{i \in N(j_k)}f_{i_k}y^*_{i}$. Então se somarmos para todo $k$, temos
-    \[ \sum_kf_{i_k} \leq \sum_k \sum_{i \in N(j_k)}f_{i}y^*_{i} = \sum_{i \in F'}f_{i}y^*_{i} \leq \sum_{i \in F}f_{i}y^*_{i} \leq \opt(I).\]
+    Vamos denotar por $S_k$ o conjunto $S$ no início da iteração $k$ do laço {\bf Enquanto} da linha 4. Além disso, vamos denotar por $j_k$ o cliente escolhido na linha 5 nessa iteração e $i_k$ a instalação escolhida na linha 6 dessa iteração. Note que 
+    \begin{align}
+        \text{custo}(X) &\leq \sum_{k} \left( {f_{i_k} + \sum_{\ell \in N^2(j_k) \cap S_k} c(i_k,\ell}) \right) \nonumber \\
+        &= \sum_k f_{i_k} + \sum_k \sum_{\ell \in N^2(j_k)\cap S_k} c(i_k, \ell)  \nonumber \\
+        & \leq \sum_k \sum_{h \in N(j_k)} f_hy_h^* + \sum_k \sum_{\ell \in N^2(j_k)\cap S_k} c(i_k, \ell) \nonumber \\
+        & \leq \sum_{i \in F} f_i y_i^* + \sum_k \sum_{\ell \in N^2(j_k)\cap S_k} 3 v_\ell^* \nonumber \\
+        & \leq \sum_{i \in F} f_i y_i^* + 3 \sum_{j \in D}  v_j^* \nonumber \\
+        & \leq \opt(I) + 3\,\opt(I) = 4\,\opt(I), \nonumber
+    \end{align}
+    em que a segunda desigualdade vale pelo Lema~\ref{lemma:3.10}, a terceira desigualdade vale pelo Lema~\ref{lemma:3.9} e a quinta desigualdade vale pela dualidade fraca. Note que não existe repetição de termo no somatório $\sum_{k} \sum_{h \in N(j_k)}$, pois sempre que escolhemos um cliente na linha 5 do algoritmo, retiramos todos os clientes que tem instalações em comum em suas vizinhanças. Assim, vale a quarta desigualdade.
+    % Perceba que, para $k_1$ e $k_2$ com $k_1 < k_2$, $N(j_{k_1})\cap N(j_{k_2}) = \emptyset$, caso contrário $j_{k_2} \in N^2(j_{k_1})$ e não estaria em~$C_{k_2}$.
+    % Seja $F' \subseteq F$, tal que $F' = \bigcup_k N(j_k)$.
+    % Por \eqref{relx_fl:*}, vale que $f_{i_k} \leq \sum_{i \in N(j_k)}f_{i_k}y^*_{i}$. Então se somarmos para todo $k$, temos
+    % \[ \sum_kf_{i_k} \leq \sum_k \sum_{i \in N(j_k)}f_{i}y^*_{i} = \sum_{i \in F'}f_{i}y^*_{i} \leq \sum_{i \in F}f_{i}y^*_{i} \leq \opt(I).\]
 
-    Agora, vamos fixar uma iteração $k$ e sejam $i = i_k$ e $j = j_k$. Pelo Lema~\ref{lemma:3.5}, sabemos que $c_{ij} \leq v^*_j$. Seja $\ell \in N^2(j) \cap C_k$ diferente de $j$ e $h \in N(\ell) \cap N(j)$. Pela desigualdade triangular e como $j$ minimiza $v^*_j$ em $C_k$, temos
-    \[ c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell} \leq v_j^* + v_j^* + v_{\ell}^* \leq 3 v_{\ell}^*.
-        \]
-    Então, temos que
-    \begin{subequations}
-        \begin{align*}
-        \sum_{k} {\big (}c_{i_kj_k} + \sum_{j \in N^2(j_k)\cap C_k} c_{i_kj} {\big )} &= \sum_{k} c_{i_kj_k} + \sum_{k}\sum_{j \in N^2(j_k)\cap C_k} c_{i_kj}\\
-        &\leq \sum_k v^*_{j_k} + 3\sum_{k}\sum_{j \in N^2(j_k)\cap C_k} v^*_j\\
-        &\leq 3 \sum_{j \in D}v^*_j \leq 3\opt(I)           
-        \end{align*}
-    \end{subequations}
-    em que a penúltima desigualdade vale pois o algoritmo só para quando $C_k$ é vazio.
+    % Agora, vamos fixar uma iteração $k$ e sejam $i = i_k$ e $j = j_k$. Pelo Lema~\ref{lemma:3.5}, sabemos que $c_{ij} \leq v^*_j$. Seja $\ell \in N^2(j) \cap C_k$ diferente de $j$ e $h \in N(\ell) \cap N(j)$. Pela desigualdade triangular e como $j$ minimiza $v^*_j$ em $C_k$, temos
+    % \[ c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell} \leq v_j^* + v_j^* + v_{\ell}^* \leq 3 v_{\ell}^*.
+    %     \]
+    % Então, temos que
+    % \begin{subequations}
+    %     \begin{align*}
+    %     \sum_{k} {\big (}c_{i_kj_k} + \sum_{j \in N^2(j_k)\cap C_k} c_{i_kj} {\big )} &= \sum_{k} c_{i_kj_k} + \sum_{k}\sum_{j \in N^2(j_k)\cap C_k} c_{i_kj}\\
+    %     &\leq \sum_k v^*_{j_k} + 3\sum_{k}\sum_{j \in N^2(j_k)\cap C_k} v^*_j\\
+    %     &\leq 3 \sum_{j \in D}v^*_j \leq 3\opt(I)           
+    %     \end{align*}
+    % \end{subequations}
+    % em que a penúltima desigualdade vale pois o algoritmo só para quando $C_k$ é vazio.
 
-    Assim, temos que o custo de abertura das instalações é no máximo $\opt(I)$ e o custo de associação é no máximo $3\opt(I)$. Portanto, o custo total da solução $S$ é no máximo $4~\opt(I)$.
+    % Assim, temos que o custo de abertura das instalações é no máximo $\opt(I)$ e o custo de associação é no máximo $3\opt(I)$. Portanto, o custo total da solução $S$ é no máximo $4~\opt(I)$.
 \end{proof}
