--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@ Bacharelado em Ciência da Computação}
 
 {\small
 São Paulo \\
-2024
+2025
 }
 \end{center}
 
@@ -49,7 +49,9 @@ São Paulo \\
 
 
 \newpage
-
+\section*{Agradecimentos}
+O presente trabalho foi realizado com apoio da Fundação de Amparo à Pesquisa do Estado de São Paulo (FAPESP), Brasil. Processo nº 2023/16197-0.
+\newpage
 \tableofcontents
 \newpage
 
@@ -67,22 +69,22 @@ Existem várias versões do problema de localização de instalações, a mais s
 No problema de localização de instalações sem capacidades, temos um grafo $(F,D)$-bipartido completo em que $D$ é o conjunto de clientes a serem atendidos e $F$ o conjunto de instalações que podem ser abertas. Para cada cliente $j \in D$ e cada instalação $i \in F$, há um custo $c_{ij}$ para a aresta $ij$ em associar o cliente $j$ à instalação $i$. Além disso, existe um custo de abertura $f_i$ para cada instalação $i \in F$. Seja $F' \subseteq F$, uma associação referente a $F'$ é uma função $\sigma : D \to F'$. Definimos o custo para $F'$ e $\sigma$ como $\text{custo}(F',\sigma)\coloneqq \sum_{ i \in F'} f_i + \sum_{j \in D} c_{\sigma_{j}j}$. Além disso, definimos custo$(F') \coloneqq~\min_{\sigma}~\text{custo}(F',\sigma)$. Claramente, o $\sigma^*$ que minimiza isso é $\sigma^*(j) = \min_{i \in F'} c_{ij}$, para todo $j \in D$. Assim, o objetivo do nosso problema é encontrar um subconjunto $F' \subseteq F$ que minimize custo$(F')$.
 
 O problema das $k$-medianas é muito parecido com o problema de localização de instalações. A diferença aqui é que não temos custo para a abertura de instalações, mas podemos abrir no máximo $k$ delas. 
-Assim como no localização de instalações, no problema das $k$-medianas temos um grafo $(F,D)$-bipartido completo em que $D$ é o conjunto de clientes a serem atendidos e $F$ o conjunto de instalações que podem ser abertas. Para cada cliente $j \in D$ e cada instalação $i \in F$, há um custo $c_{ij}$ para a aresta $ij$ em associar o cliente $j$ à instalação $i$. Temos também um inteiro $k$ que representa a quantidade de instalações que podem ser abertas. Então, queremos encontrar um conjunto $F' \subseteq F$ de tamanho $k$ e uma função que associe cada cliente a uma instalação aberta tal que o custo total de associação seja minimizado.
+Assim como no localização de instalações, no problema das $k$-medianas temos um grafo $(F,D)$-bipartido completo em que $D$ é o conjunto de clientes a serem atendidos e $F$ o conjunto de instalações que podem ser abertas. Para cada cliente $j \in D$ e cada instalação $i \in F$, há um custo $c_{ij}$ para a aresta $ij$ em associar o cliente $j$ à instalação $i$. Temos também um inteiro $k$ que representa a quantidade de instalações que podem ser abertas. Então, queremos encontrar um conjunto $F' \subseteq F$ de tamanho $k$ que minimize a soma das distâncias entre cada cliente e a instalação aberta mais próxima a ele, ou seja, minimizar custo$(F') \coloneqq \sum_{j\in D} \min_{i \in F'} c_{ij}$.
 
 No problema dos $k$-centros não existe diferença entre instalações que podem ser abertas e clientes. Temos cidades e escolheremos $k$ delas para construir instalações.
-Então, temos um grafo $G(V,E)$ completo em que $V$ são cidades e temos um custo $c_{e}$ para associar as cidades que são extremos de uma aresta $e$. Temos também um inteiro $k$ que representa a quantidade de cidades em que uma instalação será aberta. Cada cidade será associada a uma cidade com uma instalação aberta com menor custo de associação entre elas. O objetivo do nosso problema é minimizar o maior custo de associação entre uma cidade qualquer e a cidade a qual ela está associada.
+Assim, temos um grafo $G = (V,E)$ completo em que $V$ são cidades e temos um custo $c_{e}$, para cada $e \in E$, para associar as cidades que são extremos de uma aresta $e$. Temos também um inteiro $k$ que representa a quantidade de cidades em que uma instalação será aberta. Cada cidade será associada a uma cidade com uma instalação aberta com menor custo de associação entre elas. O objetivo do nosso problema é minimizar o maior custo de associação entre uma cidade qualquer e a cidade a qual ela está associada, ou seja, encontrar $F' \subseteq V$ com $|F| \leq k$ que minimize $\max_{j \in V} \min_{i \in F'} c_{ij}$.
 
-Iremos nos restringir às versões métricas de cada um desses problemas. As distâncias entre os clientes e as localizações são não direcionadas e satisfazem a desigualdade triangular. A desigualdade triangular se comporta de maneira diferente entre nos problemas devido às diferentes definições das funções de custo. Para uma instância $(G,c)$ do problema dos $k$-centros, dadas cidades $i,j,k \in V(G)$ vale que $ c_{ij} \leq c_{ik} + c_{kj}$. Para uma instância $(F,D,c,.)$ do problema das $k$-medianas ou de localizações de instalações, dados $j,k \in D$ e $i,h \in F$ vale que $c_{ij} \leq c_{ik} + c_{hk} + c_{hk}$.
+Iremos nos restringir às versões métricas de cada um desses problemas. Nesse caso, as funções de custo representam distâncias e satisfazem a desigualdade triangular. A desigualdade triangular se comporta de maneira diferente entre os problemas devido às diferentes definições das funções de custo. Para uma instância $(G,c)$ do problema dos $k$-centros, dadas cidades $i,j,k \in V(G)$ vale que $ c_{ij} \leq c_{ik} + c_{kj}$. Para uma instância $(F,D,c,.)$ do problema das $k$-medianas ou de localização de instalações, para $j,\ell \in D$ e $i,h \in F$ vale que $c_{ij} \leq c_{i\ell} + c_{h\ell} + c_{h\ell}$.
 
-Diversos métodos podem ser utilizados para aproximar o problema de localização de instalações. Charikar e Guha desenvolveram um algoritmo com razão de aproximação $2.414$ utilizando o método de busca local~\cite{Charikar&Guha'05}.  Esse problema também pode ser modelado como um problema de programação inteira e, por isso, técnicas envolvendo programação linear podem ser aplicadas a ele.  Por exemplo, há algoritmos que fazem o arredondamento de soluções da relaxação linear do programa inteiro para obter uma solução aproximada do problema.  Alguns destes algoritmos atingem boas razões de aproximação, por exemplo, chegando a 1.677~\cite{Byrka&Aardal'10}. Entretanto, a melhor aproximação encontrada utiliza vários métodos, incluindo o conhecido método primal-dual, e garante uma razão de aproximação 1.488~\cite{LI'13}. Essa não é muito distante do melhor que se poderia encontrar, uma vez que Guha e Khuller mostraram que não existe algoritmo para esse problema com razão de aproximação melhor que 1.463~\cite{GUHA1999228}, a menos que $P = \NP$.
-
-
-Dentre os três problemas apresentados, o problema das $k$-medianas é o que tem a maior folga entre o melhor resultado de inaproximabilidade e a razão do melhor algoritmo de aproximação conhecido. Jain, Mahdian e Saberi provaram que não existe algoritmo polinomial com razão de aproximação $1+ \frac{2}{e}$ para o problema das $k$-medianas~\cite{JMS'02}, assumindo que $P \neq \NP$, enquanto a melhor aproximação encontrada tem razão $2.675 + \epsilon$~\cite{BPRST'17}.
+Diversos métodos podem ser utilizados para aproximar o problema de localização de instalações métrico. Charikar e Guha desenvolveram um algoritmo com razão de aproximação $2.414$ utilizando o método de busca local~\cite{Charikar&Guha'05}.  Esse problema também pode ser modelado como um problema de programação inteira e, por isso, técnicas envolvendo programação linear podem ser aplicadas a ele.  Por exemplo, há algoritmos que fazem o arredondamento de soluções da relaxação linear do programa inteiro para obter uma solução aproximada do problema.  Alguns destes algoritmos atingem boas razões de aproximação, por exemplo, chegando a 1.677~\cite{Byrka&Aardal'10}. Entretanto, a melhor aproximação encontrada utiliza vários métodos, incluindo o conhecido método primal-dual, e garante uma razão de aproximação 1.488~\cite{LI'13}. Essa não é muito distante do melhor que se poderia encontrar, uma vez que Guha e Khuller mostraram que não existe algoritmo para esse problema com razão de aproximação melhor que 1.463~\cite{GUHA1999228}, a menos que $P = \NP$.
 
 
-Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial com razão de aproximação menor que 2 para o problema dos $k$-centros, assumindo que $P\neq\NP$. Neste caso, temos algoritmos de aproximação que apresentam o melhor desempenho possível: utilizando o método do gargalo, Gonzalez~\cite{GONZALEZ1985293} e independentemente Hochbaum e Shmoys~\cite{HochShmoys'85} desenvolveram um algoritmo polinomial com razão de aproximação igual a 2.
+Dentre os três problemas apresentados, o problema das $k$-medianas métrico é o que tem a maior folga entre o melhor resultado de inaproximabilidade e a razão do melhor algoritmo de aproximação conhecido. Jain, Mahdian e Saberi~\cite{JMS'02} provaram que não existe algoritmo polinomial com razão de aproximação $1+ \frac{2}{e}$ para o problema das $k\text{-medianas}$, assumindo que $P \neq \NP$, enquanto a melhor aproximação encontrada tem razão $2.675 + \epsilon$~\cite{BPRST'17}.
 
-A Seção 2 trata do problema dos $k$-centros. Começamos com uma prova de que o problema é $\NP$-difícil, assim como uma prova de que não existe algoritmo de aproximação para a versão que não assume função de custo métrica, a menos que $P = \NP$. Além disso, também está descrito o melhor resultado de inaproximabilidade possível que foi desenvolvido por Hsu e Nemhauser~\cite{HSU1979209} e afirma que não existe $(2-\eps)$-aproximação para esse problema. Nela também encontram-se duas 2-aproximações para esse problema: um algoritmo guloso desenvolvido por Gonzalez~\cite{GONZALEZ1985293} e um algoritmo desenvolvido por Hochbaum e Shmoys que utiliza o método do gargalo~\cite{HSBottle}.
+
+Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial com razão de aproximação menor que 2 para o problema dos $k$-centros métrico, assumindo que $P\neq\NP$. Neste caso, temos algoritmos de aproximação que apresentam o melhor desempenho possível: utilizando o método do gargalo, Gonzalez~\cite{GONZALEZ1985293} e independentemente Hochbaum e Shmoys~\cite{HochShmoys'85} desenvolveram um algoritmo polinomial com razão de aproximação igual a 2.
+
+A Seção 2 trata do problema dos $k$-centros. Começamos com uma prova de que o problema é $\NP$-difícil, assim como uma prova de que não existe algoritmo de aproximação para a versão que não assume função de custo métrica, a menos que $P = \NP$. Além disso, também está descrito o melhor resultado de inaproximabilidade, desenvolvido por Hsu e Nemhauser~\cite{HSU1979209}, que demonstra a impossibilidade de obter uma ${(2-\eps)\text{-aproximação}}$ para esse problema, a menos que $P = \NP$. Nela também encontram-se duas 2-aproximações para esse problema: um algoritmo guloso desenvolvido por Gonzalez~\cite{GONZALEZ1985293} e um algoritmo desenvolvido por Hochbaum e Shmoys que utiliza o método do gargalo~\cite{HSBottle}.
 
 
 Na Seção 3 estão presentes algoritmos de aproximação com diversas abordagens para o problema de localização de instalações, várias dessas estão ligadas à programação linear. Primeiramente, falamos um pouco sobre o problema e mostramos que ele é $\NP$-difícil. Logo após, é descrita uma 3-aproximação que utiliza o método primal-dual desenvolvida por Jain e Vazirani~\cite{JV}. Posteriormente, são apresentados dois algoritmos que fazem arredondamentos de uma solução relaxada de um programa inteiro que modela o problema: uma 4-aproximação que faz arredondamento determinístico e uma 3-aproximação que faz arredondamento probabilístico, ambas desenvolvidas por Chudak e Shmoys~\cite{Chudak2003}. Além dessas, é apresentado um algoritmo guloso que é equivalente a uma 2-aproximação que utiliza o método dual fitting desenvolvida por Jain, Mahdian, Markakis, Saberi e Vazirani~\cite{jain2002greedy}, bem como uma $(1 + \sqrt{2} + \eps)$-aproximação baseada em técnicas de busca local desenvolvida por Gupta e Tangwongsan~\cite{DBLP:journals/corr/abs-0809-2554}. É destacado o resultado de Guha e Khuller~\cite{GUHA1999228}, que demonstra a inexistência de uma 1.46-aproximação para esse problema, a menos que $P=\NP$.
