--- a/k-centros/intro.tex
+++ b/k-centros/intro.tex
@@ -1,4 +1,7 @@
-Seja $I(G,c,k)$ uma instância do problema dos $k$-centros em que $G\coloneqq (V,E)$ e $C \subseteq V$ uma solução viável para $I$. Vamos definir alguns termos que facilitarão as explicações seguintes. Os vértices de $C$ serão chamados de \emph{centros de cluster}. Os vértices de $V$ serão particionados em $k$ conjuntos chamados \emph{clusters} e cada um deles terá exatamente um centro de cluster. Um vértice estará no mesmo cluster que um centro de cluster associado a ele. Cada cluster terá um \emph{raio} que é o maior custo, de acordo com $c$, entre o seu centro e um vértice qualquer dele. Denotamos por raio$(C)$ o maior raio de um cluster induzido por $C$. Assim, o problema dos $k$-centros consiste em encontrar um conjunto $C$ de $k$ centros tal que raio$(C)$ é mínimo.
+No problema dos $k$-centros, dado um grafo $G = (V,E)$ completo com função de pesos $c$ nas arestas e um inteiro $k$, queremos encontrar um conjunto $S \subseteq V$ com tamanho no máximo $k$ que minimize a maior distância entre um vértice qualquer e esse conjunto, ou seja, que minimize $\text{raio}(S)\coloneqq \max_{u \in V\setminus S}\, c(u,S)$, em que $c(u,S) \coloneqq \min_{v \in S} c_{uv} $.
+
+
+Seja $I = (G = (V,E),c,k)$ uma instância do problema dos $k$-centros e $S \subseteq V$ com $|S| \leq k$ uma solução viável para $I$. Vamos definir alguns termos que facilitarão as explicações seguintes. Os vértices de $S$ serão chamados de \emph{centros de cluster}. Os vértices de $V$ serão particionados em $k$ conjuntos chamados \emph{clusters} e cada um deles terá exatamente um centro de cluster. Um vértice estará no mesmo cluster que um centro de cluster mais próximo a ele. Cada cluster terá um \emph{raio} que é o maior custo, de acordo com $c$, entre o seu centro e um vértice qualquer dele. Denotamos por raio$(S)$ o maior raio de um cluster induzido por $S$. Assim, o problema dos $k$-centros consiste em encontrar um conjunto $S$ de $k$ centros tal que raio$(S)$ é mínimo.
 
 Antes de falarmos sobre algoritmos de aproximação para o problema dos $k$-centros, vamos mostrar que o problema é $\NP$-difícil. Esse resultado é encontrado a partir de uma pequena alteração na prova do Teorema 5.7 do livro V2001. Para isso, vamos definir o problema do $k$-conjunto dominante.
 
@@ -16,28 +19,38 @@ Esse problema é $\NP$-completo, sendo o problema GT2 do famoso livro de Garey e
 \end{theorem}
 
 \begin{proof}
-    Suponha que exista um algoritmo $A$ que resolve o problema dos $k$-centros em tempo polinomial. Seja $G = (V,E)$ um grafo e $I(G,k)$ uma instância do problema do $k$-conjunto dominante. Vamos criar uma instância $I'(G',c,k)$ do problema dos $k$-centros a partir da instância $I$. A instância $I'$ tem como grafo o grafo completo $G'(V,E')$ e, para todo $e \in E'$,
+    Vamos provar o teorema fazendo uma redução do problema do $k$-conjunto dominante para o problema dos $k$-centros métrico.
+    Seja $I = (G,k)$ uma instância do problema do $k$-conjunto dominante com grafo $G = (V,E)$. Vamos criar uma instância $I' = (G',c,k)$ do problema dos $k$-centros a partir da instância $I$. A instância $I'$ tem como grafo o grafo completo $G' = (V,E')$ e, para todo $e \in E'$,
     \[
     c_e = \begin{cases}
             1, \text{ se } e \in E \\
             2, \text{ caso contrário.} 
             \end{cases}\]\\
     Note que $c$ satisfaz a desigualdade triangular e pode ser obtida de $I$ em tempo polinomial.
+    Precisamos mostrar que a resposta para $I$ é sim se e somente se $\opt(I') = 1$.
+    
+    Primeiramente, vamos mostrar que se a resposta para $I$ é sim, então $\opt(I') = 1$. Se a resposta para $I$ é sim, então $G$ contém um $k$-conjunto dominante. Vamos chamar tal conjunto de $D$. É evidente que raio$(D) = 1$, uma vez que para todo $u \in V\setminus D$ existe $v\in D$ tal que $uv \in E$ e, portanto, $c_{uv} = 1$. Desse modo, 
+    \begin{equation}
+        \text{raio}(D) = \max_{\quad u \not \in D} c(u,D) = \max_{\quad u \not\in D}1 = 1. \nonumber
+    \end{equation}
+        Como toda aresta de $E'$ tem custo pelo menos 1, então $\opt(I') = 1$.
 
-    O algoritmo $A$ aplicado à instância $I'$ encontra uma solução $C$, ou seja, um conjunto de $k$ centros de cluster de raio mínimo. Se raio$(C)=1$ então todos os vértices estão ligados ao centro do seu cluster com uma aresta de $G$ e assim $C$ é um conjunto dominante em $G$. 
-    Como o algoritmo $A$ minimiza o raio de $C$, se raio$(C)=2$, não existe uma solução para $I'$ em que os vértices estejam ligados ao centro do seus clusters apenas por arestas de $G$ e, por isso, não existe um conjunto dominante de tamanho menor ou igual a $k$ em $G$.
+    Agora, vamos mostrar que se $\opt(I') = 1$, então a resposta para $I$ é sim. Seja $S \subseteq V$ com $|S|\leq k$ tal que raio$(S) = 1$. Como raio$(S) = 1$, então para todo $u \not \in S$ existe $v \in S$ tal que $c_{uv} = 1$ e, portanto, $uv \in E$. Desse modo, é evidente que $S$ é um $k$-conjunto dominante de $G$. Assim, a resposta para $I$ é sim.
+
+    % O algoritmo $A$ aplicado à instância $I'$ encontra uma solução $C$, ou seja, um conjunto de $k$ centros de cluster de raio mínimo. Se raio$(C)=1$ então todos os vértices estão ligados ao centro do seu cluster com uma aresta de $G$ e assim $C$ é um conjunto dominante em $G$. 
+    % Como o algoritmo $A$ minimiza o raio de $C$, se raio$(C)=2$, não existe uma solução para $I'$ em que os vértices estejam ligados ao centro do seus clusters apenas por arestas de $G$ e, por isso, não existe um conjunto dominante de tamanho menor ou igual a $k$ em $G$.
 
     Portanto, conseguimos resolver em tempo polinomial o problema do $k$-conjunto dominante, o que implicaria que $P = \NP$.
 \end{proof}
 
 O resultado acima pode ser adaptado para dar um resultado mais forte de inaproximabilidade para a versão geral do problema dos $k$-centros, não restrita a métricas.
 \begin{theorem}
+    \label{theorem:2.4}
     Seja $\alpha(n)$ uma função computável em tempo polinomial em $n$ com $\alpha(n)\geq 1$ para todo $n$. Não existe $\alpha(n)$-aproximação para a versão geral do problema dos $k$-centros, onde $n$ é o número de vértices do grafo da instância, a menos que $P=\NP$.
 \end{theorem}
 
 \begin{proof}
-    A demonstração desse teorema é muito parecida com a do Teorema~\ref{theorem:2.3}.
-    Suponha que exista um algoritmo polinomial $A$ que é uma $\alpha(n)$-aproximação para o problema dos $k$-centros e seja $I(G,k)$ uma instância do problema do $k$-conjunto dominante em que $G = (V,E)$ é um grafo com $n$ vértices. Vamos criar uma instância $I'(G',c,k)$ do problema dos $k$-centros a partir da instância $I$. A instância $I'$ tem como grafo o grafo completo $G'(V,E')$ e, para cada $e \in E'$,
+    Suponha que exista um algoritmo polinomial $A$ que é uma $\alpha(n)$-aproximação para o problema dos $k$-centros e seja $I = (G,k)$ uma instância do problema do $k$-conjunto dominante em que $G = (V,E)$ é um grafo com $n$ vértices. Vamos criar uma instância $I' = (G',c,k)$ do problema dos $k$-centros a partir da instância $I$. A instância $I'$ tem como grafo o grafo completo $G' = (V,E')$ e, para cada $e \in E'$,
     \[c_e = \begin{cases}
             1, \text{ se } e \in E \\
             \alpha(n)+1, \text{ caso contrário.} 
@@ -45,19 +58,19 @@ O resultado acima pode ser adaptado para dar um resultado mais forte de inaproxi
     Como $\alpha(n)$ é uma função computável em tempo polinomial em $n$, essa instância pode ser construída a partir de $I$ em tempo polinomial.
     Se $\alpha(n)=1$, então $c$ obedece a desigualdade triangular e $A$ é um algoritmo polinomial e exato, o que, pelo Teorema~\ref{theorem:2.3}, é absurdo. Então, suponha $\alpha(n)>1$.
 
-    O algoritmo $A$ aplicado à instância $I'$ encontra uma solução $C$ de tamanho $k$. Como $c_e = 1$ ou $c_e = \alpha(n)+1$ para todo $e \in E'$, então raio$(C)=1$ ou raio$(C)=\alpha(n)+1$.
-    Se raio$(C)=1$ então todos os vértices estão ligados ao centro do seu cluster por uma aresta de $G$, logo $C$ é um conjunto dominante em $G$.
-    Se raio$(C) = \alpha(n) + 1$, então $\opt(I') \geq \frac{\alpha(n)+1}{\alpha(n)}>1$. Assim, não existe solução $C'$ de $I'$ tal que raio$(C')=1$ e não existe $k$-conjunto dominante em $G$.
+    O algoritmo $A$ aplicado à instância $I'$ encontra uma solução $S$ de tamanho $k$. Como $c_e = 1$ ou $c_e = \alpha(n)+1$ para todo $e \in E'$, então raio$(S)=1$ ou raio$(S)=\alpha(n)+1$.
+    Se raio$(S)=1$ então todos os vértices estão ligados ao centro do seu cluster por uma aresta de $G$, logo $S$ é um conjunto dominante em $G$.
+    Se raio$(S) = \alpha(n) + 1$, então $\opt(I') \geq \frac{\alpha(n)+1}{\alpha(n)}>1$. Assim, não existe solução $S'$ de $I'$ tal que raio$(S')=1$ e não existe $k$-conjunto dominante em $G$.
 
     Portanto, conseguimos resolver o problema do $k$-conjunto dominante em tempo polinomial o que, assumindo que $P \neq \NP$, é um absurdo.
 \end{proof}
     Fica, então, explícita a impossibilidade de encontrarmos algoritmos de aproximação para a versão geral do problema dos $k$-centros, a menos que $P = \NP$.
 
-    Agora que justificamos o estudo de algoritmos de aproximação para a versão métrica desse problema vamos mostrar um limitante inferior para a razão de aproximação desses algoritmos. Esse teorema é de autoria do Hsu e Nemhauser~\cite{HSU1979209} e é o algoritmo 5.7 do livro V2001.
+    Agora que justificamos o estudo de algoritmos de aproximação para a versão métrica desse problema vamos mostrar um limitante inferior para a razão de aproximação desses algoritmos. Esse teorema é de autoria do Hsu e Nemhauser~\cite{HSU1979209} e é o Teorema 5.7 do livro V2001.
     
     \begin{theorem}
         Seja $\varepsilon \in (0,1]$. Não existe $(2-\varepsilon)$-aproximação para a versão métrica do problema dos $k$-centros, a menos que $P=\NP$.
     \end{theorem}
-    A prova do Teorema~\ref{theorem:2.3} essencialmente serve também para esse teorema. A única diferença é que aqui assumimos a existência de uma $(2 - \varepsilon)$-aproximação para o problema dos $k$-centros e chegamos no mesmo absurdo.
+    A prova do Teorema~\ref{theorem:2.4} essencialmente serve também para esse teorema. A única diferença é que aqui assumimos a existência de uma $(2 - \varepsilon)$-aproximação para o problema dos $k$-centros e utilizamos custo 2 para as arestas que não estão no grafo da instância do problema do $k$-conjunto dominante. Assim, chegamos no mesmo absurdo.
 
-    Começaremos por um algoritmo simples, mas que garante a melhor razão de aproximação.
+    Vimos então que não existe aproximação para o caso geral do problema dos $k$-centros e que a melhor razão de aproximação possível para o $k$-centros métrico é 2, a menos que $P = \NP$. Assim, começaremos com um algoritmo simples para o problema dos $k$-centros métrico, mas que garante a melhor razão de aproximação.
